# optimization

./: .firebaserc  .gitignore  .nojekyll  _quarto.yml  about.html  about.qmd  dark-purple-plotly-layout.json  extras.css  firebase.json  index.html  index.tex  intro.qmd  katex.html  license.html  plotly-purple.json  plotly-template-transparent.json  plotlyTemplate.json  preface.html  preface.qmd  quartzno.css  quartzno.css.map  quartzno.scss  references.bib  references.qmd  search.json  sitemap.xml
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
.quarto/idx/: index.qmd.json  intro.qmd.json  references.qmd.json  summary.qmd.json
.quarto/idx/basics/: first-definitions.qmd.json
.quarto/xref/: 8fb60106  INDEX
_book/: index.html  intro.html  references.html  search.json  summary.html
_book/site_libs/bootstrap/: bootstrap.min.css
basics/: first-definitions.html  first-definitions.qmd  the-chain-rule.qmd  the-jacobian.html  the-jacobian.qmd
basics/optimization/: index.html
code/2D-Examples/: pyproject.toml  slice-along-x-axis.html  slice-along-x-axis.json
code/2D-Examples/2d_examples/: functions.py  grideval.py  inputs.py  plotting.py  runopt.py  symbolic.py
examples/: foreign-aid.html
examples/optim/: index.html
public/: about.html  index.html  preface.html  robots.txt  search.json  sitemap.xml  theme.scss
public/basics/: first-definitions.html  the-jacobian.html
public/site_libs/bootstrap/: bootstrap.min.css
site_libs/bootstrap/: bootstrap.min.css
theme/bootswatch/: Gruntfile.js  custom.theme
(+9 files in other folders)
